--- a/wp-content/themes/komin-master/stylesheets/admin.css
+++ b/wp-content/themes/komin-master/stylesheets/admin.css
@@ -8,6 +8,18 @@
   display: none;
 }
 
-#login #nav {
+#login #nav, #backtoblog {
   display: none;
+}
+
+#login h1 a, #login h1 a:hover {
+  background: none;
+  text-indent: 0;
+  font-size: 1.4em;
+  line-height: 1.5;
+  text-align: center;
+  font-weight: normal;
+  color: #000;
+  text-decoration: none;
+  cursor: text;
 }
