--- a/wp-content/themes/komin-master/stylesheets/nav-posts.scss
+++ b/wp-content/themes/komin-master/stylesheets/nav-posts.scss
@@ -28,6 +28,7 @@ menu.history {
       text-overflow: ellipsis;
     }
     span.icon-large {
+      display: inline-block;
       color: $backgroundDark;
       width: 1.5em;
       font-size: 1.5em;
