--- a/wp-content/themes/komin-blogg/stylesheets/post.scss
+++ b/wp-content/themes/komin-blogg/stylesheets/post.scss
@@ -28,6 +28,7 @@
         font-family: $sansSerif;
         font-size: emize(13);
         margin: 0;
+        color: $linkColor;
       }
     }
     time, dl {
