Added external blog to build info

--- a/wp-content/themes/komin-master/stylesheets/application.scss
+++ b/wp-content/themes/komin-master/stylesheets/application.scss
@@ -1,4 +1,4 @@
-// sass --watch komin-master/stylesheets/application.scss komin-nyheter/stylesheets/application.scss  komin-blogg/stylesheets/application.scss
+// sass --watch komin-master/stylesheets/application.scss komin-nyheter/stylesheets/application.scss  komin-blogg/stylesheets/application.scss   external-blogg/stylesheets/application.scss
 // Add --style compressed before deployment
 @import 'variables';
 @import 'mixins';
