Cleanup from intranet stuff

--- a/wp-content/themes/external-blogg/style.css
+++ b/wp-content/themes/external-blogg/style.css
@@ -1,12 +1,11 @@
 /*
-Theme Name: Komin Blog
-Theme URI: http://komin.malmo.se/
-Description: Child theme for Malmö stad's internal blog
+Theme Name:External Blog
+Theme URI: http://www.malmo.se/blogg
+Description: Child theme for Malmö stad's external blog
 Author: Malmö stad
 Template: komin-master
 */
 
 /*
-Use the Sass file stylesheets/application.scss for styles and transform it with:
-$ sass --watch stylesheets/application.scss
+Use the Sass to generate master and child CSS. See style.css in master theme.
 */
