--- a/wp-content/themes/external-blogg/stylesheets/base.scss
+++ b/wp-content/themes/external-blogg/stylesheets/base.scss
@@ -1,4 +1,9 @@
 body {
+  padding: 0 .5em;
+  min-width: 56em;
+  margin-top: 0;
+  margin-right: 1em;
+  margin-left: 1em;
   > .wrapper, > footer nav {
     max-width: 56em;
   }
