--- a/wp-content/themes/external-blogg/stylesheets/media-queries.scss
+++ b/wp-content/themes/external-blogg/stylesheets/media-queries.scss
@@ -1,3 +1,22 @@
+@media ( max-width: 68em ) {
+  body {
+    min-width: 0;
+  }
+}
+
+@media ( max-width: 51em ) {
+  body {
+    padding: 0;
+    margin-left: 0;
+    margin-right: 0;
+    .wrapper {
+      margin: 0 1.5em;
+      padding-bottom: 1em;
+    }
+  }
+}
+
+
 @media ( max-width: 54em ) {
   [role="main"] {
     @include columns(12);
