--- a/wp-content/themes/external-blogg/stylesheets/base.scss
+++ b/wp-content/themes/external-blogg/stylesheets/base.scss
@@ -1,11 +1,11 @@
 body {
   padding: 0 .5em;
   min-width: 56em;
-  margin-top: 0;
-  margin-right: 1em;
-  margin-left: 1em;
-  > .wrapper, > footer nav {
+  margin: 0 1em 2em;
+  > .wrapper {
+    @include clearfix();
     max-width: 56em;
+    margin: 0 auto;
   }
 }
 
@@ -22,4 +22,9 @@ aside {
   h2, p {
     margin: 0 0 0 22%;
   }
+}
+.categories {
+  clear: both;
+  font-family: $sansSerif;
+  font-size: emize(13, 16);
 }
