--- a/wp-content/themes/external-blogg/stylesheets/base.scss
+++ b/wp-content/themes/external-blogg/stylesheets/base.scss
@@ -22,9 +22,11 @@ aside {
   h2, p {
     margin: 0 0 0 22%;
   }
-}
-.categories {
-  clear: both;
-  font-family: $sansSerif;
-  font-size: emize(13, 16);
+  nav {
+    font-family: $sansSerif;
+    font-size: emize(13, 16);
+    a {
+      color: black;
+    }
+  }
 }
