Size fix for textarea in comments

--- a/wp-content/themes/komin-master/stylesheets/comments.scss
+++ b/wp-content/themes/komin-master/stylesheets/comments.scss
@@ -61,7 +61,8 @@
     }
     margin-bottom: 0;
     textarea {
-      width: 95%;
+      @include box-sizing(border-box);
+      width: 100%;
     }
   }
   .reply {
