--- a/wp-content/themes/external-blogg/stylesheets/aside.scss
+++ b/wp-content/themes/external-blogg/stylesheets/aside.scss
@@ -1,4 +1,16 @@
 aside {
+  nav {
+    font-family: $sansSerif;
+    li {
+      line-height: 1.3;
+      margin: 0 0 .6em;
+    }
+    a {
+      font-size: emize(13, 16);
+      color: black;
+      display: inline;
+    }
+  }
   p {
     margin: 0;
     clear: both;
