--- a/wp-content/themes/komin-master/stylesheets/aside.scss
+++ b/wp-content/themes/komin-master/stylesheets/aside.scss
@@ -6,7 +6,7 @@ aside {
     @include clearfix();
     @include box-sizing('border-box');
     padding: .4em 0 .4em;
-    border: solid white;
+    border: solid transparent;
     border-width: 1px 0;
     margin: 0;
   }
@@ -18,10 +18,11 @@ aside {
     line-height: 1;
     font-family: $sansSerif;
     border-bottom: $border;
-    margin: 0;
+    margin: 0 0 .4em;
+    padding-bottom: .2em;
     a {
       color: black;
-      padding-bottom: .2em;
+      padding: 0;
     }
   }
   h2 {
