--- a/wp-content/themes/external-blogg/stylesheets/loop.scss
+++ b/wp-content/themes/external-blogg/stylesheets/loop.scss
@@ -1,4 +1,13 @@
 .loop {
+  section.post {
+    padding: 0 0 1em;
+    .entry-meta {
+      margin-top: 0;
+    }
+    h1 {
+      margin: -.2em 0 0;
+    }
+  }
   margin-top: 0;
   .post {
     .entry-meta {
