--- a/wp-content/themes/external-blogg/stylesheets/aside.scss
+++ b/wp-content/themes/external-blogg/stylesheets/aside.scss
@@ -17,6 +17,7 @@ aside {
     }
   }
   .latest-post {
+    margin-bottom: 1.5em;
     a {
       padding: 0 0 1em;
       color: black;
@@ -37,7 +38,7 @@ aside {
     }
   }
   .widget-area {
-    margin: 0 0 1em;
+    margin: 0 0 2em;
     a {
     }
     p {
@@ -45,5 +46,4 @@ aside {
       clear: both;
     }
   }
-
 }
