--- a/wp-content/themes/external-blogg/stylesheets/media-queries.scss
+++ b/wp-content/themes/external-blogg/stylesheets/media-queries.scss
@@ -59,6 +59,7 @@
     h2 {
       font-family: $serif;
       font-size: emize(18);
+      color: $linkColor;
     }
     time {
       font-size: emize(13);
@@ -102,6 +103,7 @@
     h2 {
       font-family: $sansSerif;
       font-size: emize(13);
+      color: black;
     }
     time {
       font-size: emize(11);
