--- a/wp-content/themes/external-blogg/stylesheets/media-queries.scss
+++ b/wp-content/themes/external-blogg/stylesheets/media-queries.scss
@@ -13,6 +13,9 @@
       margin: 0 1.5em;
       padding-bottom: 1em;
     }
+    #masthead-search {
+      margin-right: 1em;
+    }
     .breadcrumbs {
       margin: .5em 1.5em;
     }
