Changed  the master themes name

--- a/wp-content/themes/external-blogg/style.css
+++ b/wp-content/themes/external-blogg/style.css
@@ -3,7 +3,7 @@ Theme Name:External Blog
 Theme URI: http://www.malmo.se/blogg
 Description: Child theme for Malmö stad's external blog
 Author: Malmö stad
-Template: komin-master
+Template: master
 */
 
 /*
