--- a/wp-content/themes/komin-blogg/style.css
+++ b/wp-content/themes/komin-blogg/style.css
@@ -3,7 +3,7 @@ Theme Name: Komin Blog
 Theme URI: http://komin.malmo.se/
 Description: Child theme for Malmö stad's internal blog
 Author: Malmö stad
-Template: komin-master
+Template: master
 */
 
 /*
