--- a/wp-content/themes/komin-nyheter/style.css
+++ b/wp-content/themes/komin-nyheter/style.css
@@ -3,7 +3,7 @@ Theme Name: Komin Nyheter
 Theme URI: http://komin.malmo.se/
 Description: Child theme for Malmö stad's internal news
 Author: Malmö stad
-Template: komin-master
+Template: master
 */
 
 /*
