--- a/wp-content/themes/master/style.css
+++ b/wp-content/themes/master/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Komin Master
+Theme Name: Master
 Theme URI: http://www.malmo.se/wag/
 Description: Main theme for Malmö stad's internal news
 Author: Malmö stad
