Forced wrap on RTF editor toolbar in WP RWD theme

--- a/wp-content/themes/master/stylesheets/admin.css
+++ b/wp-content/themes/master/stylesheets/admin.css
@@ -25,3 +25,8 @@
   height: auto !important;
   width: auto !important;
 }
+
+.mceToolbar > tbody > tr > td {
+  float: left;
+  min-height: 28px;
+}
