Auth for edit links display

--- a/wp-content/themes/master/stylesheets/base.scss
+++ b/wp-content/themes/master/stylesheets/base.scss
@@ -30,6 +30,11 @@ aside {
   margin: 1em 0;
 }
 
+.btn a {
+  color: black;
+}
+
+
 .wrapper {
   .categories, .archive, .authors, .help {
     .page-title {
