--- a/wp-content/themes/external-blogg/stylesheets/application.css
+++ b/wp-content/themes/external-blogg/stylesheets/application.css
@@ -1,22 +1,14 @@
-body {
-  min-width: 56em; }
-
-body > .wrapper {
-  padding: 0 .5em; }
-
 .wrapper {
   *zoom: 1;
-  max-width: 56em;
-  margin: 0 auto; }
+  max-width: 60em;
+  margin: 0 auto;
+  padding: 0 .5em; }
   .wrapper:before, .wrapper:after {
     display: table;
     content: "";
     line-height: 0; }
   .wrapper:after {
     clear: both; }
-
-.breadcrumbs {
-  margin: .5em 0 1.5em; }
 
 main {
   width: 74.5%;
@@ -35,11 +27,6 @@ aside {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
-  aside .featured-image {
-    background-color: transparent;
-    width: 18%; }
-  aside h2, aside p {
-    margin: 0 0 0 22%; }
 
 .post article.body-copy, .post .history, .post #comments {
   width: 74.5%;
@@ -160,7 +147,54 @@ aside {
     float: right;
     margin: 0; }
 
-aside a {
-  color: black; }
-aside .latest-post {
-  margin-bottom: 1.5em; }
+aside h1 a:hover, aside li a:hover {
+  text-decoration: none; }
+aside ul, aside ol {
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+  aside ul a, aside ol a {
+    color: black; }
+aside .latest-posts li {
+  *zoom: 1;
+  margin-bottom: .4em; }
+  aside .latest-posts li:before, aside .latest-posts li:after {
+    display: table;
+    content: "";
+    line-height: 0; }
+  aside .latest-posts li:after {
+    clear: both; }
+aside .latest-posts .featured-image {
+  width: 21.25%;
+  margin-right: 5%;
+  float: left;
+  -ms-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background-color: transparent; }
+  aside .latest-posts .featured-image img {
+    margin-top: 0.1875em;
+    width: 100%;
+    height: auto; }
+aside .latest-posts p {
+  width: 73.75%;
+  margin-right: 0;
+  float: left;
+  -ms-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  line-height: 1.3; }
+  aside .latest-posts p time {
+    clear: both;
+    display: block;
+    font-size: 0.85714em;
+    color: #333; }
+aside .widget-area {
+  margin: 0 0 2em; }
+  aside .widget-area p {
+    font-family: Georgia, "Droid Serif", "DejaVu Serif", "Bitstream Vera Serif", serif;
+    font-size: 0.9375em;
+    margin: 0 0 1em;
+    clear: both; }
