--- a/wp-content/themes/external-blogg/stylesheets/aside.scss
+++ b/wp-content/themes/external-blogg/stylesheets/aside.scss
@@ -1,37 +1,52 @@
 aside {
-  a {
-    color: black;
+  h1, li {
+    a:hover {
+      text-decoration: none;
+    }
   }
-//   li:first-child a, &:hover {
-//     border: none;
-//   }
-//   h1 a {
-//     border-width: 0;
-//   }
-  .latest-post {
-    margin-bottom: 1.5em;
-//     h2 {
-//       font-family: $sansSerif;
-//       font-size: emize(13);
-//     }
-//     time {
-//       color: black;
-//       font-size: emize(11);
-//       margin-left: 22%;
-//       display: block;
-//     }
-//     p {
-//       clear: left;
-//       margin: 0;
-//     }
-//   }
-//   .widget-area {
-//     margin: 0 0 2em;
-//     a {
-//     }
-//     p {
-//       margin: 0 0 1em;
-//       clear: both;
-//     }
+
+  ul, ol {
+    a {
+      color: black;
+    }
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .latest-posts {
+    li {
+      @include clearfix();
+      margin-bottom: .4em;
+    }
+    .featured-image {
+      @include columns(3, false, 5%);
+      background-color: transparent;
+      img {
+        margin-top: emize(3);
+        width: 100%;
+        height: auto;
+      }
+    }
+    p {
+      @include columns(9, true, 5%);
+      line-height: 1.3;
+      time {
+        clear: both;
+        display: block;
+        font-size: emize(12, 14);
+        color: #333;
+      }
+    }
+  }
+
+  .widget-area {
+    margin: 0 0 2em;
+    p {
+      font-family: $serif;
+      font-size: emize(15);
+      margin: 0 0 1em;
+      clear: both;
+    }
   }
 }
