--- a/wp-content/themes/external-blogg/stylesheets/aside.scss
+++ b/wp-content/themes/external-blogg/stylesheets/aside.scss
@@ -1,3 +1,5 @@
+@import "extends";
+
 aside {
   h1, li {
     a:hover {
@@ -6,12 +8,14 @@ aside {
   }
 
   ul, ol {
-    a {
-      color: black;
-    }
     list-style: none;
     margin: 0;
     padding: 0;
+  }
+  h1, li {
+    a {
+      color: black;
+    }
   }
 
   .latest-posts {
@@ -41,10 +45,14 @@ aside {
   }
 
   .widget-area {
+    h1 {
+      @extend h1.aside;
+    }
     margin: 0 0 2em;
     p {
       font-family: $serif;
       font-size: emize(15);
+      line-height: 1.4;
       margin: 0 0 1em;
       clear: both;
     }
