--- a/wp-content/themes/external-blogg/stylesheets/application.css
+++ b/wp-content/themes/external-blogg/stylesheets/application.css
@@ -147,63 +147,14 @@ aside {
     float: right;
     margin: 0; }
 
-h1.body-copy {
-  font-family: Georgia, "Droid Serif", "DejaVu Serif", "Bitstream Vera Serif", serif;
-  font-weight: normal;
-  font-size: 2.25em;
-  line-height: 1.11111em;
-  margin: 0 0 .3em; }
-
-h2.body-copy {
-  font-family: Georgia, "Droid Serif", "DejaVu Serif", "Bitstream Vera Serif", serif;
-  font-weight: normal;
-  font-size: 1.5em;
-  line-height: 1.20833em;
-  margin: 1.5em 0 .2em; }
-
-h3.body-copy {
-  font-family: Georgia, "Droid Serif", "DejaVu Serif", "Bitstream Vera Serif", serif;
-  font-weight: bold;
-  font-size: 1.0625em;
-  line-height: 1.47059em;
-  margin: 1.5em 0 0; }
-
-h4.body-copy {
-  font-family: Georgia, "Droid Serif", "DejaVu Serif", "Bitstream Vera Serif", serif;
-  font-weight: normal;
-  font-style: italic;
-  font-size: 1.0625em;
-  line-height: 1.47059em;
-  margin: 1.5em 0 0; }
-
-p.body-copy {
-  font-family: Georgia, "Droid Serif", "DejaVu Serif", "Bitstream Vera Serif", serif;
-  font-size: 1.0625em;
-  line-height: 1.47059em; }
-
-p.preamble-body-copy {
-  font-weight: bold;
-  font-family: "OpenSans", "Droid Sans", "DejaVu Sans", "Bitstream Vera Sans", sans-serif;
-  font-size: 1em;
-  line-height: 1.3125em; }
-
-h1.aside, aside .widget-area h1 {
-  font-family: "OpenSans", "Droid Sans", "DejaVu Sans", "Bitstream Vera Sans", sans-serif;
-  font-size: 1em;
-  font-weight: bold;
-  line-height: 1.2;
-  border-bottom: #b5b5b5 1px solid;
-  margin: 0 0 .3em;
-  padding: 0 0 .2em; }
-
+aside h1 a, aside li a {
+  color: black; }
 aside h1 a:hover, aside li a:hover {
   text-decoration: none; }
 aside ul, aside ol {
   list-style: none;
   margin: 0;
   padding: 0; }
-aside h1 a, aside li a {
-  color: black; }
 aside .latest-posts li {
   *zoom: 1;
   margin-bottom: .4em; }
@@ -223,7 +174,7 @@ aside .latest-posts .featured-image {
   box-sizing: border-box;
   background-color: transparent; }
   aside .latest-posts .featured-image img {
-    margin-top: 0.1875em;
+    margin-top: 0.25em;
     width: 100%;
     height: auto; }
 aside .latest-posts p {
@@ -234,11 +185,12 @@ aside .latest-posts p {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  line-height: 1.3; }
+  line-height: 1.3;
+  font-size: 0.92857em;
+  font-family: Georgia, "Droid Serif", "DejaVu Serif", "Bitstream Vera Serif", serif; }
   aside .latest-posts p time {
     clear: both;
     display: block;
-    font-size: 0.85714em;
     color: #333; }
 aside .widget-area {
   margin: 0 0 2em; }
